Partial fix to AppTables and AppMain My Apps section to know when scroll is visible in list.

--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -468,11 +468,24 @@ button {
     }
 
     tbody {
+      width: calc(100% - 16px);
       display: block;
       height: auto;
-      max-height: 62vh;
+      max-height: calc(325px - 52px);
       overflow: auto;
-      padding-right: 6px;
+      padding-right: 4px;
+
+      td {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+  }
+
+  &.has-scroll {
+    tbody {
+      width: 100%;
     }
   }
 
